--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "vitest": "^4.0.18"
   }
 }
