--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "test:coverage": "vitest run"
+    "test": "vitest run"
   },
   "repository": {
     "type": "git",
