chore: added test to project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
               node-version: "${{env.NODE_VERSION}}"
           
           - name: Run test 
-            run: npm run test
+            run: |
+                npm run test
 
 
     # build-image:
