--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,27 @@ jobs:
                 npm run test
 
 
-    # build-image:
-    #     name: Building docker image
-    #     needs: [test, security-scan]
-    #     runs-on: ubuntu-latest
-    #     if: github.ref == 'ref/head/main'
-    #     steps: 
-    #         - name: Checkout repo
-    #           uses: actions/checkout@v4
+    build-image:
+        name: Building docker image
+        needs: [test]
+        runs-on: ubuntu-latest
+        if: github.ref == 'ref/head/main'
+        steps: 
+            - name: Checkout repo
+              uses: actions/checkout@v4
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{vars.DOCKEHUB_USERNAME}}
+                password: ${{secrets.DOCKERHUB_PASSWORD}}
+            - name: Set up QEM
+              uses: docker/setup-qemu-action@v3
 
-    #         - name: SetUp Docker
-    #           uses: 
+            - name: SetUp Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            
+            - name: Build
+              uses: docker/build-push-action@v6
+              with: 
+                push: true
+                tags: knelson24th/multi-con-todo:${{github.workflow_sha}}
