chore: modified github action, fix if statement

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         name: Building docker image
         needs: [test]
         runs-on: ubuntu-latest
-        if: github.ref == 'ref/head/main'
+        if: github.ref == 'refs/heads/main'
         steps: 
             - name: Checkout repo
               uses: actions/checkout@v4
