--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                username: ${{vars.DOCKEHUB_USERNAME}}
+                username: ${{vars.DOCKERHUB_USERNAME}}
                 password: ${{secrets.DOCKERHUB_PASSWORD}}
             - name: Set up QEM
               uses: docker/setup-qemu-action@v3
