--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -46,3 +46,28 @@ jobs:
               uses: actions/checkout@v5
             - name: Build applicaiton
               run: ${{env.BUILD_COMMAND}}
+    build-artifact:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Build application
+          run: npm run build
+
+        - name: upload build artifacts
+          uses: actions/upload-artifact@v4
+          with:
+            name: build-output.${{github.run_number}}
+            path: /dist
+    deploy:
+      needs: build-artifact
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Download build artifacts
+          uses: actions/download-artifact@v4
+          with:
+            name: app-build
+            path: ./deployment
+
+        - name: List directory
+          run: |
+            ls -l ./deployment
