--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -58,9 +58,8 @@ jobs:
         - name: Install packages
           run: npm ci
         - name: Build application
-          run: |
-            mkdir -p /temp/dist
-            tar -cvzf /temp/dist/app_build.tar.gz . --warning=no-file-changed
+          run: 
+            tar -cvzf ../app_build.tar.gz .
 
         - name: upload build artifacts
           uses: actions/upload-artifact@v4
