--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -58,14 +58,15 @@ jobs:
         - name: Install packages
           run: npm ci
         - name: Build application
-          run: 
-            tar -cvzf ../app_build.tar.gz .
+          run: |
+            sudo mkdir -p build
+            tar -cvzf build/app_build.tar.gz . --exlude=build
 
         - name: upload build artifacts
           uses: actions/upload-artifact@v4
           with:
             name: app-build
-            path: ../app_build.tar.gz
+            path: build/app_build.tar.gz
     deploy:
       needs: build-artifact
       runs-on: ubuntu-latest
