--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -60,7 +60,7 @@ jobs:
         - name: Build application
           run: |
             sudo mkdir -p build
-            tar -cvzf build/app_build.tar.gz . --exlude=build
+            tar -cvzf build/app_build.tar.gz . --exclude=build
 
         - name: upload build artifacts
           uses: actions/upload-artifact@v4
