--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -59,14 +59,13 @@ jobs:
           run: npm ci
         - name: Build application
           run: |
-            sudo mkdir -p build
-            sudo tar -cvzf build/app_build.tar.gz . --exclude=build
+            tar -cvzf app_build.tar.gz . --exclude=app_build.tar.gz
 
         - name: upload build artifacts
           uses: actions/upload-artifact@v4
           with:
             name: app-build
-            path: build/app_build.tar.gz
+            path: /app_build.tar.gz
     deploy:
       needs: build-artifact
       runs-on: ubuntu-latest
