--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -59,13 +59,14 @@ jobs:
           run: npm ci
         - name: Build application
           run: |
-            tar -cvzf app_build.tar.gz  --exclude 'app_build.tar.gz' --ignore-failed-read ./
+            sudo mkdir -p build_output 
+            tar -cvzf build_output/app_build.tar.gz  --exclude 'build_output' --ignore-failed-read ./
 
         - name: upload build artifacts
           uses: actions/upload-artifact@v4
           with:
             name: app-build
-            path: /app_build.tar.gz
+            path: build_output/app_build.tar.gz
     deploy:
       needs: build-artifact
       runs-on: ubuntu-latest
