--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -80,4 +80,5 @@ jobs:
 
         - name: List directory
           run: |
+            tar -xvzf .deployment/app_build.tar.gz .
             ls -l ./deployment
