chore: added env for gh_token

--- a/.github/workflows/training.yaml
+++ b/.github/workflows/training.yaml
@@ -70,6 +70,8 @@ jobs:
     deploy:
       needs: build-artifact
       runs-on: ubuntu-latest
+      env:
+        GH_TOKEN: ${{github.token}}
 
       steps:
         - name: Download build artifacts
@@ -86,4 +88,6 @@ jobs:
         - name: Monitor Artifact
           run: |
             echo "Checking artifact usage"
+            $GH_TOKEN=${{github.token}}
+            echo "GH_TOKEN=$GH_TOKEN" >> $GITHUB_ENV
             gh api repos/${{github.repository}} --jq '.size'
