--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
         runs-on: ubuntu-latest
         if: ${{github.event.workflow_run.conclusion == 'success' }}
 
+        permissions:
+            actions: read
+            contents: read
+
         steps:
             - name: Checkout repo
               uses: actions/checkout@v5
@@ -20,3 +24,5 @@ jobs:
               with:
                 name: app-build
                 path: ./deployment
+                run-id: ${{github.event.workflow_run.id}}
+                github-token: ${{secrets.GITHUB_TOKEN}}
