modified path for build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: app-build
-                path: build_output/app_buid.tar
+                path: build_output/app_build.tar
