--- a/.github/workflows/greeting.yaml
+++ b/.github/workflows/greeting.yaml
@@ -22,3 +22,6 @@ jobs:
             run: |
                 ls ${{github.workspace}}
           - run: echo "this job's status is ${{job.status}}"
+
+          - name: Display Commit head
+            run: echo ${{github.event.head_commit.message}}
