--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -15,7 +15,10 @@ jobs:
     create-tag:
         if: contains(github.event.head_commit.message, '[release]')
         runs-on: ubuntu-latest
-
+        permissions:
+            contents: 
+                write
+            
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
