--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
+    "mongoose": "^9.1.6",
     "zod": "^4.3.6"
   },
   "devDependencies": {
