--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,27 +8,28 @@ on:
       types: [completed]
 
 jobs:
-    build-artifact:
+    build-image:
+        name: Building docker image
+        needs: [test]
         runs-on: ubuntu-latest
-        if: ${{github.event.workflow_run.conclusion == 'success'}}
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v5
-
-            - name: Setup nodejs env
-              uses: actions/setup-node@v3
-            
-            - name: Install Packages
-              run: npm ci
-
-            - name: Build Application
-              run: |
-                sudo mkdir build_output
-                sudo tar -cvf build_output/app_build.tar --exclude 'build_output' --ignore-failed-read ./
-
-            - name: Upload Application
-              uses: actions/upload-artifact@v4
+        if: github.ref == 'refs/heads/main'
+        steps: 
+            - name: Checkout repo
+              uses: actions/checkout@v4
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
               with:
-                name: app-build
-                path: build_output/app_build.tar
+                username: ${{vars.DOCKERHUB_USERNAME}}
+                password: ${{secrets.DOCKERHUB_PASSWORD}}
+            - name: Set up QEM
+            # assign IP address and access docker hub website
+              uses: docker/setup-qemu-action@v3
+
+            - name: SetUp Docker Buildx
+              uses: docker/setup-buildx-action@v3
+            
+            - name: Build
+              uses: docker/build-push-action@v6
+              with: 
+                push: true
+                tags: knelson24th/multi-con-todo:${{github.workflow_sha}}
