--- a/.github/workflows/badge-monitor.yml
+++ b/.github/workflows/badge-monitor.yml
@@ -2,7 +2,7 @@ name: Badge Monitor
 
 on:
     workflow_run:
-        workflows: ["Deploy Application", "Create Release Tag"]
+        workflows: ["Build Application", "Create Release Tag"]
         types: [completed]
 
 jobs:
