chore: added .pem to gitnore, updated variables.tf, applied security to instance in main.tf

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ app_build2.tar
 *.tfstate.*
 terraform.tfstate
 terraform.tfstate.backup
-
+*.pem
 # Crash logs from failed runs
 crash.log
 crash.*.log
